--- a/templates/regression.html
+++ b/templates/regression.html
@@ -5,15 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regression Models</title>
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="icon" href="/static/images/assetanalysis.ico" type="image/x-icon">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
-        .container {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 10px;
-            box-sizing: border-box;
-        }
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
         body {
             display: flex;
             flex-direction: column;
@@ -21,47 +17,50 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #72EDF2 10%, #5151E5 100%);
+            font-family: 'Roboto', Arial, sans-serif;
+            background: linear-gradient(135deg, #72EDF2, #5151E5);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 20px;
             box-sizing: border-box;
         }
+
         h1 {
-            margin-top: 100px; /* Adjust this to accommodate the fixed header */
-            margin-bottom: 40px;
-            font-size: 2.5em;
+            margin-top: 80px;
+            margin-bottom: 20px;
+            font-size: 3em;
             color: black;
         }
+
         form {
             display: flex;
             flex-direction: column;
             align-items: center;
             background-color: rgba(0, 0, 0, 0.5);
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
             width: 100%;
-            max-width: 500px;
+            max-width: 800px;
             box-sizing: border-box;
         }
+
         label, select, input, button {
             margin: 10px 0;
             width: 100%;
         }
-        #result {
-            margin-top: 20px;
-            width: 100%;
-            max-width: 1600px;
-            justify-content: center;
-            align-items: center;
-            display: none;
+
+        input, select {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            background-color: white;
+            color: black;
         }
-        pre {
-            text-align: left;
-            white-space: pre-wrap;
-        }
+
         button {
             padding: 10px;
             background-color: #4CAF50;
@@ -69,42 +68,86 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            margin-top: 20px;
             transition: background-color 0.3s, transform 0.3s;
+            
         }
+
         button:hover {
-            background-color: #45a049;
             transform: scale(1.05);
         }
+
         .ticker-table {
             margin-top: 20px;
+            margin-bottom: 5px;
             background-color: rgba(0, 0, 0, 0.5);
             padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
             width: 100%;
-            max-width: 500px;
+            max-width: 800px;
             box-sizing: border-box;
         }
+
         .ticker-table table {
             width: 100%;
             border-collapse: collapse;
             color: white;
         }
+
         .ticker-table th, .ticker-table td {
             padding: 10px;
             border: 1px solid white;
             text-align: center;
         }
+
         .ticker-table th {
             background-color: #5151E5;
         }
+
+        #result {
+            margin-top: 20px;
+            width: 100%;
+            max-width: 100%;
+            justify-content: center;
+            align-items: center;
+            display: none;
+            padding-left: 20px; /* Add padding on the sides */
+            padding-right: 20px; /* Add padding on the sides */
+            box-sizing: border-box; /* Ensure padding doesn't affect the width */
+        }
+
+        #regressionPlot {
+            width: 100%;
+            height: 800px;
+        }
+
+        pre {
+            text-align: left;
+            white-space: pre-wrap;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.5);
+            border-radius: 5px;
+            color: white;
+            margin-top: 20px;
+        }
+
+        .footer {
+            margin: 20px;
+            font-size: 0.8em;
+            color: #fff;
+        }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
         @media (max-width: 600px) {
             h1 {
                 font-size: 2em;
-                margin-top: 70px; /* Adjust this to accommodate the fixed header */
             }
-            form {
+            form, .ticker-table {
                 width: 100%;
                 max-width: 300px;
                 padding: 15px;
@@ -180,7 +223,9 @@
             </tbody>
         </table>
     </div>
-    <div id="result"></div>
+    <div id="result">
+        <div id="regressionPlot"></div>
+    </div>
     <button onclick="window.location.href='/'">Back to Home</button>
     <script>
         document.getElementById('regressionForm').addEventListener('submit', function(e) {
@@ -204,15 +249,14 @@
             .then(data => {
                 const graph = JSON.parse(data.graph);
                 const resultDiv = document.getElementById('result');
-                const regressionPlotDiv = document.createElement('div');
-                regressionPlotDiv.id = 'regressionPlot';
+                const regressionPlotDiv = document.getElementById('regressionPlot');
                 regressionPlotDiv.style.width = '100%';
                 regressionPlotDiv.style.height = '800px';
                 resultDiv.innerHTML = '';  // Clear previous plot if any
                 resultDiv.appendChild(regressionPlotDiv);
                 Plotly.newPlot('regressionPlot', graph.data, graph.layout, {responsive: true});
                 
-                result.style.display = 'block'; // Show the result div when data is ready
+                resultDiv.style.display = 'block'; // Show the result div when data is ready
 
                 // Force a resize to fill the entire space
                 window.dispatchEvent(new Event('resize'));
@@ -222,5 +266,8 @@
             });
         });
     </script>
+    <div class="footer">
+        Regressions © 2024
+    </div>
 </body>
 </html>
