--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="icon" href="/static/images/assetanalysis.ico" type="image/x-icon">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
         body {
             display: flex;
             flex-direction: column;
@@ -13,58 +16,111 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', Arial, sans-serif;
             background: linear-gradient(135deg, #72EDF2 10%, #5151E5 100%);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
             color: white;
             text-align: center;
-            padding: 20px; /* Add some padding to ensure it doesn't touch the screen edges */
+            padding: 20px;
             box-sizing: border-box;
         }
+
         h1 {
+            margin-top: 80px;
             margin-bottom: 20px;
-            font-size: 2.5em;
+            font-size: 3em;
+            color: black;
         }
+
         .container {
             display: flex;
             flex-direction: column;
             align-items: center;
             background-color: rgba(0, 0, 0, 0.5);
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 600px; /* Increase the max-width to make the form bigger */
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            width: calc(100% - 40px);
+            max-width: 800px;
+            box-sizing: border-box;
+            margin: 20px auto;
         }
+
         form {
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 100%; /* Make the form take the full width */
+            width: 100%;
         }
+
         label, input, select, button {
             width: 100%;
-            margin: 10px 0; /* Adjust the margin for consistent spacing */
+            margin: 10px 0;
         }
-        input, select, button {
+
+        input, select {
             padding: 10px;
-            border-radius: 4px;
+            border-radius: 5px;
             border: none;
-            margin-top: 5px;
+            background-color: white;
+            color: black;
+            font-size: 1em;
         }
+
         button {
+            padding: 10px;
             background-color: #4CAF50;
             color: white;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
         }
+
         button:hover {
-            background-color: #45a049;
+            transform: scale(1.05);
         }
+
+        #backButton {
+            width: 100%;
+            max-width: 100%;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        #backButton:hover {
+            background-color: #45a049;
+            transform: scale(1.05);
+        }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
         @media (max-width: 600px) {
-            .container {
-                padding: 20px; /* Adjust form padding for mobile devices */
+            h1 {
+                font-size: 2em;
             }
-            input, button, select {
+            .container {
                 width: 100%;
+                max-width: 300px;
+                padding: 15px;
+            }
+            button {
+                padding: 8px;
+            }
+            #backButton {
+                width: 100%;
+                max-width: 300px;
             }
         }
     </style>
@@ -74,6 +130,8 @@
     <h1>Register</h1>
     <div class="container">
         <form method="POST">
+            <input type="text" name="first_name" placeholder="First Name" required>
+            <input type="text" name="last_name" placeholder="Last Name" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
             <label for="subscription">Choose a subscription plan:</label>
@@ -85,5 +143,6 @@
             <button type="submit">Register</button>
         </form>
     </div>
+    <button id="backButton" onclick="window.location.href='/'">Back to Home</button>
 </body>
 </html>
