--- a/templates/profile.html
+++ b/templates/profile.html
@@ -44,7 +44,7 @@
             cursor: pointer;
         }
         button:hover {
-            background-color: #45a049;
+            transform: scale(1.05);
         }
         .cancel-button {
             background-color: #FF6347;
