--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/static/style.css">
     <link rel="icon" href="/static/images/assetanalysis.ico" type="image/x-icon">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
         body {
             display: flex;
             flex-direction: column;
@@ -14,48 +16,125 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', Arial, sans-serif;
             background: linear-gradient(135deg, #72EDF2 10%, #5151E5 100%);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
             color: white;
             text-align: center;
+            padding: 20px;
+            box-sizing: border-box;
         }
+
+        h1 {
+            margin-top: 80px;
+            margin-bottom: 20px;
+            font-size: 3em;
+            color: black;
+        }
+
         .container {
             display: flex;
             flex-direction: column;
             align-items: center;
             background-color: rgba(0, 0, 0, 0.5);
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 90%;
-            max-width: 500px;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            width: calc(100% - 40px); /* Add space on the sides */
+            max-width: 800px;
+            box-sizing: border-box;
+            margin: 20px auto;
         }
-        input, button, select {
+
+        label, input, select, button {
             width: 100%;
-            max-width: 500px;
-            padding: 10px;
-            border-radius: 4px;
-            border: none;
-            margin-top: 10px;
+            margin: 10px 0;
         }
+
+        input, select {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            background-color: white;
+            color: black;
+        }
+
         button {
+            padding: 10px;
             background-color: #4CAF50;
             color: white;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
         }
+
         button:hover {
             transform: scale(1.05);
         }
+
         .cancel-button {
             background-color: #FF6347;
         }
+
         .cancel-button:hover {
             background-color: #FF4500;
         }
+
         .confirmation {
             display: none;
             flex-direction: column;
             align-items: center;
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        #backButton {
+            width: 100%;
+            max-width: 100%;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        #backButton:hover {
+            background-color: #45a049;
+            transform: scale(1.05);
+        }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2em;
+            }
+            .container {
+                width: 100%;
+                max-width: 300px;
+                padding: 15px;
+            }
+            button {
+                padding: 8px;
+            }
+            .confirmation {
+                max-width: 300px;
+                padding: 15px;
+            }
+            #backButton {
+                width: 100%;
+                max-width: 300px;
+            }
         }
     </style>
 </head>
@@ -82,6 +161,7 @@
         </div>
         {% endif %}
     </div>
+    <button id="backButton" onclick="window.location.href='/'">Back to Home</button>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             document.getElementById('update-subscription').addEventListener('click', function() {
