--- a/templates/investment_growth.html
+++ b/templates/investment_growth.html
@@ -6,6 +6,7 @@
     <title>Investment Growth Calculator</title>
     <link rel="stylesheet" href="/static/style.css">
     <link rel="icon" href="/static/images/assetanalysis.ico" type="image/x-icon">
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
@@ -16,86 +17,96 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #72EDF2 10%, #5151E5 100%);
+            font-family: 'Roboto', Arial, sans-serif;
+            background: linear-gradient(135deg, #72EDF2, #5151E5);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 20px;
             box-sizing: border-box;
-            animation: gradientBG 15s ease infinite;
         }
+
         h1 {
-            margin-top: 100px; /* Adjust this to accommodate the fixed header */
+            margin-top: 60px;
             margin-bottom: 40px;
-            font-size: 2.5em;
+            font-size: 3em;
             color: black;
         }
-        .content, .add-more-content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 1000px;
-            box-sizing: border-box;
-            margin-bottom: 20px;
-        }
+
         form {
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 10px;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
             width: 100%;
             max-width: 800px;
-            margin: 0 auto;
+            box-sizing: border-box;
         }
+
         label, input, button {
+            margin: 10px 0;
             width: 100%;
-            padding: 10px;
-            border-radius: 4px;
-            border: none;
-            margin-bottom: 15px;
         }
+
+        input {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            background-color: white;
+            color: black;
+        }
+
         button {
-            margin-top: 20px;
+            padding: 10px;
             background-color: #4CAF50;
             color: white;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s, transform 0.3s;
         }
+
         button:hover {
-            background-color: #45a049;
             transform: scale(1.05);
         }
+
         #investment_graph {
             width: 100%;
-            max-width: 1000px;
             height: 800px;
-            margin-bottom: 20px; /* Add some space below the graph */
+            margin-top: 20px;
+            display: none;
         }
+
         .summary {
             background-color: rgba(0, 0, 0, 0.5);
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 1000px;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            width: 100%;  /* Set the width to 100% */
+            max-width: 800px;  /* Match the max-width of the form */
             box-sizing: border-box;
             margin-top: 20px;
             color: white;
+            display: none;
         }
+
         .summary-item {
             margin-bottom: 10px;
         }
+
         .footer {
-            margin-top: 20px;
+            margin: 20px;
             font-size: 0.8em;
             color: #fff;
         }
+
         #backButton {
+            margin-top: 20px;
             padding: 10px 20px;
             background-color: #4CAF50;
             color: white;
@@ -104,18 +115,18 @@
             cursor: pointer;
             transition: background-color 0.3s, transform 0.3s;
         }
+
         #backButton:hover {
             background-color: #45a049;
             transform: scale(1.05);
         }
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
+
         @media (max-width: 600px) {
             h1 {
                 font-size: 2em;
@@ -127,6 +138,9 @@
             }
             button {
                 padding: 8px;
+            }
+            #investment_graph {
+                height: 400px;
             }
         }
     </style>
@@ -185,22 +199,20 @@
 <body>
     {% include 'header.html' %}
     <h1>Investment Growth Calculator</h1>
-    <div class="content">
-        <form>
-            <label for="tickers">Enter Stock Tickers (comma-separated):</label>
-            <input type="text" id="tickers" name="tickers" placeholder="e.g. AAPL, MSFT, GOOGL" required>
+    <form>
+        <label for="tickers">Enter Stock Tickers (comma-separated):</label>
+        <input type="text" id="tickers" name="tickers" placeholder="e.g. AAPL, MSFT, GOOGL" required>
 
-            <label for="start_date">Select Start Date:</label>
-            <input type="date" id="start_date" name="start_date" required>
+        <label for="start_date">Select Start Date:</label>
+        <input type="date" id="start_date" name="start_date" required>
 
-            <label for="monthly_investment">Monthly Investment Amount ($):</label>
-            <input type="number" id="monthly_investment" name="monthly_investment" value="100" min="1" step="1" required>
+        <label for="monthly_investment">Monthly Investment Amount ($):</label>
+        <input type="number" id="monthly_investment" name="monthly_investment" value="100" min="1" step="1" required>
 
-            <button type="submit">Generate Graph</button>
-        </form>
-    </div>
-    <div id="investment_graph" style="display: none;"></div>
-    <div id="summary" class="summary" style="display: none;"></div>
+        <button type="submit">Generate Graph</button>
+    </form>
+    <div id="summary" class="summary"></div>
+    <div id="investment_graph"></div>
     <button id="backButton" onclick="window.location.href='/'">Back to Home</button>
     <div class="footer">
         Investment Tracker © 2024
