--- a/templates/index.html
+++ b/templates/index.html
@@ -122,11 +122,11 @@
     <nav>
         <ul>
             <li><a href="regression">Regression Models</a></li>
+            <li><a href="investment_tracker">Investment Tracker</a></li>
             <li><a href="portfolio_optimizer">Portfolio Optimizer</a></li>
             <li><a href="portfolio_comparisons">Portfolio Comparisons</a></li>
             <li><a href="company_comparisons">Company Comparisons</a></li>
-            <li><a href="stock_price_performance">Stock Performance Tracker</a></li>
-            <li><a href="investment_growth">Investment Growth Calculator</a></li>
+            <li><a href="correlation_matrix">Correlation Coefficients</a></li>
         </ul>
     </nav>
     <div class="message" id="message"></div>
