--- a/templates/header.html
+++ b/templates/header.html
@@ -7,12 +7,12 @@
             <div class="dropdown">
                 <button class="dropbtn">Models</button>
                 <div class="dropdown-content">
-                    <a href="/regression">Regression Models</a>
-                    <a href="/portfolio_optimizer">Portfolio Optimizer</a>
-                    <a href="/portfolio_comparisons">Portfolio Comparisons</a>
-                    <a href="/company_comparisons">Company Comparisons</a>
-                    <a href="/stock_price_performance">Stock Performance Tracker</a>
-                    <a href="/investment_growth">Investment Growth Calculator</a>
+                    <a href="regression">Regression Models</a>
+                    <a href="investment_tracker">Investment Tracker</a>
+                    <a href="portfolio_optimizer">Portfolio Optimizer</a>
+                    <a href="portfolio_comparisons">Portfolio Comparisons</a>
+                    <a href="company_comparisons">Company Comparisons</a>
+                    <li><a href="correlation_matrix">Correlation Coefficients</a></li>
                 </div>
             </div>
         </div>
